--- a/chat/style.css
+++ b/chat/style.css
@@ -1,55 +1,40 @@
 html {
 	font-family: 'Catamaran', sans-serif;
-	background-color: #0b0b0b;
+	background-color: #000000;
 	color: #e8e6e3;
-	height: 100%;
-	width: 100%;
 }
 
-body {
-   min-height: 100%;
-   width: 100%;
-   display: flex;
-   flex-flow: column;
-}
-
-main{
-	text-align: left;
-	height:3%;
-	-webkit-animation: fade-in-bottom .4s cubic-bezier(.23,1.000,.32,1.000) both;
-	animation: fade-in-bottom .4s cubic-bezier(.23,1.000,.32,1.000) both;
-}
 
 footer {
     text-align: center;
     padding: 50px;
 	position: fixed;
-	left: 50%;
-	transform: translate(-50%, 0%);
-	margin-right: -50%;
 	bottom: 0px;
 	padding:0px;
-	font-size: xx-large;
-	
+	font-size: small;
+	opacity: 30%
 }
 
 header p {
-	font-size: 250%;
+	font-size: 450%;
 	padding: 0px;
 	margin: 0px;
 	margin-bottom: -.5%;
 }
 
-html body div#tlkio{
-	min-height: 100%;
-   width: 100%;
-   flex-grow: 1;
-}
+html {
+  /* The image used */
+  background-image: url("fourohfour.png");
 
-#tlkio > iframe{
-	position: absolute;
-	top:0;
-	bottom:0;
+  /* Full height */
+  height: 100%;
+  margin: 0;
+  
+  background-position: right bottom; /*Positioning*/
+  background-repeat: no-repeat; /*Prevent showing multiple background images*/
+  
+  /* Center and scale the image nicely */
+
 }
 
 /* ----------------------------------------------
@@ -59,4 +44,4 @@ html body div#tlkio{
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 
-@-webkit-keyframes fade-in-bottom{0%{-webkit-transform:translateY(50px);transform:translateY(50px);opacity:0}100%{-webkit-transform:translateY(0px);transform:translateY(0px);opacity:1}}@keyframes fade-in-bottom{0%{-webkit-transform:translateY(50px);transform:translateY(50px);opacity:0}100%{-webkit-transform:translateY(0px);transform:translateY(0px);opacity:1}}
+@-webkit-keyframes fade-in-bottom{0%{-webkit-transform:translate(-50%, 50px);transform:translate(-50%, 50px);opacity:0}100%{-webkit-transform:translate(-50%, 0px);transform:translate(-50%, 0px);opacity:1}}@keyframes fade-in-bottom{0%{-webkit-transform:translate(-50%, 50px);transform:translate(-50%, 50px);opacity:0}100%{-webkit-transform:translate(-50%, 0px);transform:translate(-50%, 0px);opacity:1}}
