--- a/chat/style.css
+++ b/chat/style.css
@@ -24,7 +24,7 @@ header p {
 
 html {
   /* The image used */
-  background-image: url("fourohfour.png");
+  background-image: url("https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/fourohfour.png");
 
   /* Full height */
   height: 100%;
