--- a/games/style.css
+++ b/games/style.css
@@ -1,40 +1,142 @@
 html {
 	font-family: 'Catamaran', sans-serif;
-	background-color: #000000;
+	background-color: #0b0b0b;
 	color: #e8e6e3;
+	padding: 10px;
 }
 
+main{
+	text-align: left;
+	-webkit-animation: fade-in-bottom .4s cubic-bezier(.23,1.000,.32,1.000) both;
+	animation: fade-in-bottom .4s cubic-bezier(.23,1.000,.32,1.000) both
+}
 
 footer {
     text-align: center;
     padding: 50px;
 	position: fixed;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	margin-right: -50%;
 	bottom: 0px;
 	padding:0px;
-	font-size: small;
-	opacity: 30%
+	font-size: xx-large;
+	
+}
+
+frostbites {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
 
 header p {
-	font-size: 450%;
+	font-size: 250%;
 	padding: 0px;
 	margin: 0px;
 	margin-bottom: -.5%;
 }
 
-html {
-  /* The image used */
-  background-image: url("https://cdn.jsdelivr.net/gh/noblereign/noblereign.github.io/fourohfour.png");
+h4{
+	margin-top: 3%;
+	color: #eeeeee;
+}
 
-  /* Full height */
+div.content p{
+	color: #eeeeee;
+}
+
+.card {
+  border: 1px solid #444444;
+  border-radius: .25rem;
+  background-color: #333333;
+  box-shadow: 0 1px 2px rgba(255,255,255,0.15);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+/* Pre-render the bigger shadow, but hide it */
+.card::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  margin: 0;
-  
-  background-position: right bottom; /*Positioning*/
-  background-repeat: no-repeat; /*Prevent showing multiple background images*/
-  
-  /* Center and scale the image nicely */
+  box-shadow: 0 5px 15px rgba(255,255,255,0.3);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
 
+.card:hover {
+  -webkit-transform: scale(1.05, 1.05);
+  transform: scale(1.05, 1.05);
+}
+
+/* Transition to showing the bigger shadow on hover */
+.card:hover::after {
+  opacity: 1;
+}
+
+.bg-img {
+  background-size: cover;
+  min-height: 180px;
+  background-position: center;
+  background-color: #555555;
+}
+
+.content {
+  padding: 15px;
+}
+
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-gap: 20px;
+}
+
+button {
+	position: relative;
+	bottom: 0px;
+	filter: drop-shadow(0px 5px 3px rgba(0,0,0,0.3));
+	/*background-color: transparent;*/
+	border: 1px solid #2196F3;
+	padding: .5rem 1rem;
+	cursor: pointer;
+	border-radius: .25rem;
+	font-weight: 400;
+	transition: all .1s linear;
+}
+
+button:active{
+	bottom: -3px;
+	filter: drop-shadow(0px 0px 1px rgba(0,0,0,0.9));
+	box-shadow: none;
+}
+
+#play {
+	background: #47ef47;
+	color: black;
+	-webkit-text-fill-color: white; /* Will override color (regardless of order) */
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #219e2f;
+	border-color: #108300;
+}
+
+#play:active {
+	background: #47cd47;
+}
+
+#more {
+	background: #444444;
+	color: #eeeeee;
+	border-color: #363636;
+}
+
+#more:active {
+	background: #333333;
 }
 
 /* ----------------------------------------------
@@ -44,4 +146,4 @@ html {
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 
-@-webkit-keyframes fade-in-bottom{0%{-webkit-transform:translate(-50%, 50px);transform:translate(-50%, 50px);opacity:0}100%{-webkit-transform:translate(-50%, 0px);transform:translate(-50%, 0px);opacity:1}}@keyframes fade-in-bottom{0%{-webkit-transform:translate(-50%, 50px);transform:translate(-50%, 50px);opacity:0}100%{-webkit-transform:translate(-50%, 0px);transform:translate(-50%, 0px);opacity:1}}
+@-webkit-keyframes fade-in-bottom{0%{-webkit-transform:translateY(50px);transform:translateY(50px);opacity:0}100%{-webkit-transform:translateY(0px);transform:translateY(0px);opacity:1}}@keyframes fade-in-bottom{0%{-webkit-transform:translateY(50px);transform:translateY(50px);opacity:0}100%{-webkit-transform:translateY(0px);transform:translateY(0px);opacity:1}}
