--- a/games/style.css
+++ b/games/style.css
@@ -121,8 +121,11 @@ button:active{
 		position:absolute;
 		bottom:3%;
 		display:grid;
-		grid-template-columns: 1fr auto;
-		grid-template-rows: 1fr auto;
+		grid-template-columns: 18% auto;
+		grid-template-rows: 100% auto;
+		grid-gap: 3%;
+		height: 8%;
+		width: 90%;
 }
 
 #play {
