--- a/404_proto.css
+++ b/404_proto.css
@@ -24,7 +24,7 @@ header p {
 
 html {
   /* The image used */
-  background-image: url("fourohfourproto.png");
+  background-image: url("fourohfourspider.png");
 
   /* Full height */
   height: 100%;
